@@ -17,6 +17,14 @@ class Sys::Socket {
   
   native static method ntohs : short ($netshort : short);
 
+  native static method inet_aton : int ($cp : string, $inp : Sys::Socket::In_addr);
+
+  native static method inet_ntoa : string ($in : Sys::Socket::In_addr);
+
+  native static method inet_pton : int ($af : int, $src : string, $dst : object of Sys::Socket::In_addr|Sys::Socket::In6_addr);
+  
+  native static method inet_ntop : string ($af : int, $src : object of Sys::Socket::In_addr|Sys::Socket::In6_addr, $dst : mutable string, $size : int);
+  
   native static method socket : int ($domain : int, $type : int, $protocol : int);
 
   native static method connect : int ($sockfd : int, $addr : Sys::Socket::Sockaddr, $addrlen : int);
@@ -46,14 +54,6 @@ class Sys::Socket {
   native static method getsockopt : int ($sockfd : int, $level : int, $optname : int, $optval : mutable string, $optlen_ref : int*);
 
   native static method getsockopt_int : int ($sockfd : int, $level : int, $optname : int, $optval_ref : int*);
-  
-  native static method inet_aton : int ($cp : string, $inp : Sys::Socket::In_addr);
-
-  native static method inet_ntoa : string ($in : Sys::Socket::In_addr);
-
-  native static method inet_pton : int ($af : int, $src : string, $dst : object of Sys::Socket::In_addr|Sys::Socket::In6_addr);
-  
-  native static method inet_ntop : string ($af : int, $src : object of Sys::Socket::In_addr|Sys::Socket::In6_addr, $dst : mutable string, $size : int);
   
   native static method ioctlsocket : int ($s : int, $cmd : int, $argp : int*);
 
