@@ -143,6 +143,13 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
   }
 }
 
+if ($^O eq 'MSWin32') {
+  
+}
+else {
+  
+}
+
 ok(SPVM::TestCase::Sys::Socket->socket);
 
 # Sys::Socket::Sockaddr
